--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -28,6 +28,8 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Node Install
+        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
