--- a/.github/workflows/testflight.yml
+++ b/.github/workflows/testflight.yml
@@ -37,7 +37,8 @@ jobs:
       - name: Make iOS
         run: |
           make ios
-      - run: |
+      - name: Node Build
+        run: |
           pnpm run build
         # env:
         #   JITSU_JS_KEY: ${{ secrets.JITSU_JS_KEY }}
