--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -66,6 +66,26 @@ jobs:
       - name: Run Unit Tests
         run: |
           bundle exec fastlane test
+        continue-on-error: true
+        env:
+          APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
+          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+          APPLE_KEY_CONTENT: ${{ secrets.APPLE_KEY_CONTENT }}
+          GIT_AUTHORIZATION: ${{ secrets.BOT_TOKEN }}
+          TEMP_KEYCHAIN_PASSWORD: ${{ secrets.TEMP_KEYCHAIN_PASSWORD }}
+          TEMP_KEYCHAIN_USER: ${{ secrets.TEMP_KEYCHAIN_USER }}
+          DEVELOPER_APP_ID: ${{ secrets.DEVELOPER_APP_ID }}
+          DEVELOPER_APP_IDENTIFIER: ${{ secrets.DEVELOPER_APP_IDENTIFIER }}
+          PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.PROVISIONING_PROFILE_SPECIFIER }}
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+      - if: github.event_name == 'pull_request'
+        uses: mobile-dev-inc/action-maestro-cloud@main
+        continue-on-error: true
+        with:
+          api-key: ${{ secrets.MAESTRO_CLOUD_API_KEY }}
+          name: ${{ github.sha }}
+          app-file: ios/LightWalletDev.xcarchive/Products/Applications/LightWalletDev.app
+          workspace: ios/.mobiledev
   ios-check:
     if: always()
     needs:
