--- a/packages/background/package.json
+++ b/packages/background/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lightwallet/background",
+  "name": "@lightdotso/background",
   "private": false,
   "version": "0.0.1",
   "scripts": {
