--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Node Build
         run: |
           pnpm run build --filter={apps/extension}
-      - if: github.event_name == 'push'
+      - if: github.event_name == 'pull_request'
         name: Chrome upload
         uses: mnao305/chrome-extension-upload@v4.0.1
         with:
@@ -38,7 +38,7 @@ jobs:
         with:
           file-path: apps/extension/chrome.zip
           extension-id: emflafmoooolgldefbdhjeifjnhhhedc
-          publish-target: trustedTesters
+          publish: true
           client-id: ${{ secrets.EXTENSION_CLIENT_ID }}
           client-secret: ${{ secrets.EXTENSION_CLIENT_SECRET }}
           refresh-token: ${{ secrets.EXTENSION_REFRESH_TOKEN }}
