--- a/apps/extension/turbo.json
+++ b/apps/extension/turbo.json
@@ -3,12 +3,8 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": [
-        "../../ios/LightWalletSafariExtension/Resources/content.js",
-        "../../apps/extension/chrome/content.js",
-        "../../apps/extension/firefox/content.js"
-      ]
+      "outputs": ["chrome.zip"],
+      "dependsOn": ["^build", "clean"]
     },
     "dev": {
       "cache": false,
