--- a/packages/popup/package.json
+++ b/packages/popup/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@lightwallet/popup",
+  "name": "@lightdotso/popup",
   "private": false,
   "version": "0.0.1",
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NODE_ENV=production next build && next export -o '../../ios/LightWalletSafariExtension/Resources/popup' && cp '../../ios/LightWalletSafariExtension/Resources/popup/index.html' '../../ios/LightWalletSafariExtension/Resources/popup.html'",
-    "build:dev": "cross-env NODE_ENV=development next build && next export -o '../../ios/LightWalletSafariExtension/Resources/popup' && cp '../../ios/LightWalletSafariExtension/Resources/popup/index.html' '../../ios/LightWalletSafariExtension/Resources/popup.html'",
+    "build": "cross-env NODE_ENV=production next build && pnpm run cp:ios",
+    "build:dev": "cross-env NODE_ENV=development next build && pnpm run cp:ios",
+    "cp:ios": "pnpm run cp:ios:popup && pnpm run cp:ios:index",
+    "cp:ios:popup": "cp -r 'out' '../../ios/LightWalletSafariExtension/Resources/popup'",
+    "cp:ios:index": "cp '../../ios/LightWalletSafariExtension/Resources/popup/index.html' '../../ios/LightWalletSafariExtension/Resources/popup.html'",
     "start": "next start"
   },
   "dependencies": {
