--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Java Install
         uses: wallet-rs/wallet-rs/.github/actions/java-install@main
       - run: |
-          cat $PLAY_STORE_JSON_KEY > play_store_key.json
+          echo $PLAY_STORE_JSON_KEY > play_store_key.json
         env:
           PLAY_STORE_JSON_KEY: ${{ secrets.PLAY_STORE_JSON_KEY }}
       - if: github.event_name == 'push'
@@ -71,7 +71,7 @@ jobs:
         #   JITSU_JS_KEY: ${{ secrets.JITSU_JS_KEY }}
       - if: github.event_name == 'push'
         run: |
-          bundle exec fastlane build
+          bundle exec fastlane ios build
         env:
           APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
           APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
@@ -85,7 +85,7 @@ jobs:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
       - if: github.event_name == 'merge_group'
         run: |
-          bundle exec fastlane production
+          bundle exec fastlane ios production
         env:
           APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
           APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
@@ -99,7 +99,7 @@ jobs:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
       - if: github.event_name == 'pull_request'
         run: |
-          bundle exec fastlane dev
+          bundle exec fastlane ios dev
         env:
           APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
           APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
