--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -136,6 +136,35 @@ jobs:
           forge test
         env:
           NETWORK_NAME: ${{ matrix.network }}
+  contracts-script:
+    if: needs.contracts-turbo.outputs.trigger == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    needs:
+      - contracts-turbo
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        network:
+          - sepolia
+    timeout-minutes: 90
+    env:
+      FOUNDRY_PROFILE: fork
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Install Deps
+        run: |
+          forge install
+      - name: Run Fork
+        run: |
+          forge test
+        env:
+          NETWORK_NAME: ${{ matrix.network }}
   contracts-smt:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
@@ -264,6 +293,7 @@ jobs:
       - contracts-lint
       - contracts-test
       - contracts-fork
+      - contracts-script
       - contracts-smt
       - contracts-storage
       - contracts-noir
@@ -274,5 +304,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-test,contracts-fork,contracts-smt,contracts-storage,contracts-noir,contracts-slither
+          allowed-skips: contracts-build,contracts-lint,contracts-test,contracts-fork,contracts-script,contracts-smt,contracts-storage,contracts-noir,contracts-slither
           jobs: ${{ toJSON(needs) }}
