--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -11,6 +11,7 @@
 [dependencies]
   autometrics = { workspace = true }
   axum = { workspace = true }
+  ethers-main = { workspace = true }
   eyre = { workspace = true }
   governor = "0.5.1"
   http = { workspace = true }
@@ -18,6 +19,7 @@
   lightdotso-redis = { workspace = true }
   lightdotso-tracing = { workspace = true }
   serde = { workspace = true, features = ["derive"] }
+  serde_json = { workspace = true }
   tower = { workspace = true, features = [
     "full",
     "util",
