--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -19,6 +19,7 @@ on:
         options:
           - consumer
           - indexer
+          - graph
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -102,8 +103,6 @@ jobs:
   fly-deploy-consumer-error:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'consumer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -118,8 +117,6 @@ jobs:
   fly-deploy-consumer-nfn:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'consumer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -134,8 +131,6 @@ jobs:
   fly-deploy-consumer-retry:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'consumer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -150,8 +145,6 @@ jobs:
   fly-deploy-consumer-tx:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'consumer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -209,6 +202,34 @@ jobs:
         continue-on-error: true
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-graph:
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'graph'
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v4
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/graph
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-ipfs:
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'graph'
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v4
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/ipfs
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-indexer:
     runs-on: ubuntu-latest
     needs:
@@ -227,8 +248,6 @@ jobs:
   fly-deploy-indexer-arbitrum:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -243,8 +262,6 @@ jobs:
   fly-deploy-indexer-avalanche:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -259,8 +276,6 @@ jobs:
   fly-deploy-indexer-base:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -275,8 +290,6 @@ jobs:
   fly-deploy-indexer-bsc:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -291,8 +304,6 @@ jobs:
   fly-deploy-indexer-gnosis:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -307,8 +318,6 @@ jobs:
   fly-deploy-indexer-polygon:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -323,8 +332,6 @@ jobs:
   fly-deploy-indexer-optimism:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -339,8 +346,6 @@ jobs:
   fly-deploy-indexer-sepolia:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.group == 'indexer'
     runs-on: ubuntu-latest
-    needs:
-      - fly-wait-docker
     timeout-minutes: 30
     steps:
       - name: Fetch Head
@@ -472,6 +477,8 @@ jobs:
       - fly-deploy-exporter
       - fly-deploy-gas
       - fly-deploy-grafana
+      - fly-deploy-graph
+      - fly-deploy-ipfs
       - fly-deploy-indexer
       - fly-deploy-indexer-arbitrum
       - fly-deploy-indexer-avalanche
@@ -494,5 +501,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-exporter,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-exporter,fly-deploy-gas,fly-deploy-grafana,fly-deploy-graph,fly-deploy-ipfs,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
