--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -49,7 +49,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@storybook/addon-styling": "^1.3.7",
@@ -93,6 +93,7 @@
     "@storybook/addon-measure": "^7.4.6",
     "@storybook/addon-outline": "^7.4.6",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-themes": "^7.4.6",
     "@storybook/addons": "^7.4.6",
     "@storybook/channel-postmessage": "^7.4.6",
     "@storybook/channel-websocket": "^7.4.6",
