--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -50,12 +50,14 @@
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@types/lodash": "^4.14.199",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "inngest": "^3.1.1",
     "kysely-postgres-js": "^1.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.263.1",
     "next": "^13.5.4",
     "next-auth": "^4.23.2",
