--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,11 +25,13 @@
     "clean": "rimraf -rf dist && rimraf -rf src/v1.d.ts"
   },
   "dependencies": {
+    "@lightdotso/schemas": "workspace:*",
     "clsx": "^2.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "neverthrow": "^6.0.0",
-    "openapi-fetch": "^0.7.10"
+    "openapi-fetch": "^0.7.10",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
