--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@lightdotso/client",
-  "version": "1.0.0",
+  "name": "@lightdotso/schemas",
+  "version": "0.0.0",
   "private": true,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
   "bugs": {
@@ -23,18 +23,11 @@
     "clean": "rimraf -rf dist"
   },
   "dependencies": {
-    "@lightdotso/schemas": "workspace:*",
-    "clsx": "^2.0.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.3.1",
-    "neverthrow": "^6.0.0",
-    "openapi-fetch": "^0.7.10",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.8.4",
-    "openapi-typescript": "^6.7.0",
     "typescript": "^5.2.2"
   },
   "publishConfig": {
