--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -41,12 +41,13 @@
     "@prisma/client": "^5.4.2",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.4.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@sentry/integrations": "^7.73.0",
-    "@sentry/nextjs": "^7.73.0",
-    "@tanstack/react-query": "^5.0.0-beta.9",
-    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
+    "@sentry/integrations": "^7.74.1",
+    "@sentry/nextjs": "^7.74.1",
+    "@tanstack/query-core": "5.0.0",
+    "@tanstack/react-query": "5.0.0",
+    "@tanstack/react-query-devtools": "^5.0.0",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
-    "@tremor/react": "^3.9.1",
+    "@tremor/react": "^3.9.2",
     "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
@@ -58,11 +59,11 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "immer": "^10.0.3",
-    "inngest": "^3.1.1",
+    "inngest": "^3.2.1",
     "kysely-postgres-js": "^1.1.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.263.1",
-    "next": "^13.5.4",
+    "lucide-react": "^0.288.0",
+    "next": "^13.5.5",
     "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "permissionless": "^0.0.6",
@@ -74,8 +75,8 @@
     "server-only": "^0.0.1",
     "siwe": "^2.1.4",
     "superjson": "^2.0.0",
-    "viem": "^1.16.4",
-    "wagmi": "^1.4.3",
+    "viem": "^1.16.6",
+    "wagmi": "^1.4.4",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
@@ -83,7 +84,7 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^20.8.4",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
