--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -28,10 +28,10 @@
     "@lightdotso/ui": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@prisma/client": "^5.4.2",
-    "@sentry/integrations": "^7.73.0",
-    "@sentry/nextjs": "^7.73.0",
-    "@tanstack/react-query": "^5.0.0-beta.9",
-    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
+    "@sentry/integrations": "^7.74.1",
+    "@sentry/nextjs": "^7.74.1",
+    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "^5.0.0",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
     "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
@@ -39,7 +39,7 @@
     "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "connectkit": "^1.5.3",
     "kysely-postgres-js": "^1.1.1",
-    "next": "^13.5.4",
+    "next": "^13.5.5",
     "next-auth": "^4.23.2",
     "postgres": "^3.4.0",
     "prisma": "^5.4.2",
@@ -48,14 +48,14 @@
     "server-only": "^0.0.1",
     "siwe": "^2.1.4",
     "superjson": "^2.0.0",
-    "viem": "^1.16.4",
-    "wagmi": "^1.4.3"
+    "viem": "^1.16.6",
+    "wagmi": "^1.4.4"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^20.8.4",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
